[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esmfold2-complex"
version = "0.1.0"
description = "Lightweight ESMFold2 wrapper for protein complex FASTA prediction and quality reporting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "esm>=3.0.0",
]

[project.scripts]
esmfold2-complex = "esmfold2_complex.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/esmfold2_complex"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
